# KiCAD-MCP-Server

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
config/: claude-desktop-config.json  linux-config.example.json  macos-config.example.json  windows-config.example.json
python/: kicad_interface.py
python/commands/: component.py  export.py  library_symbol.py  pin_locator.py  routing.py  schematic_kiutils.py  wire_manager.py
python/schemas/: tool_schemas.py
tests/: conftest.py  test_export_bom.py
